--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   qrscan: ^0.3.1
   google_maps_flutter: ^1.2.0
   flutter_polyline_points: ^0.2.4
+  image_picker: ^0.6.7+17
 
 dev_dependencies:
   flutter_test:
