--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   google_maps_flutter: ^1.2.0
   flutter_polyline_points: ^0.2.4
   image_picker: ^0.6.7+17
+  cached_network_image: ^2.5.0
 
 dev_dependencies:
   flutter_test:
